# ZPlayer

./: .gitignore  CMakeLists.txt  README.md
3rdpart/ffmpeg/lib/: libavdevice.58.13.100.dylib  libavfilter.7.110.100.dylib  libavformat.58.76.100.dylib  libavresample.4.0.0.dylib  libavutil.56.70.100.dylib  libpostproc.55.9.100.dylib  libswresample.3.9.100.dylib  libswscale.5.9.100.dylib
3rdpart/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavresample.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
ZAV/: CMakeLists.txt  ZAV.h  ZAVDecoder.cpp  ZAVDecoderPrivate.h  ZAVFrame.cpp  ZAVFramePrivate.h  ZAVPacket.cpp  ZAVPacketPrivate.h  ZAVReader.cpp  ZAVReaderPrivate.h  ZAVStream.cpp  ZAVStreamPrivate.h
ZMedia/: CMakeLists.txt  ZPlayer.cpp
ZMedia/src/: ZPlayer.cpp
ZThread/: CMakeLists.txt  ZThread.cpp  ZThread.h
